### Added
- More move failure triggers.

### Fixed
- Rooms with no exits being given exits of the previous room.